fix: single and multi select option color in dark mode

--- a/packages/nc-gui/ee/assets/css/theme-overrides.scss
+++ b/packages/nc-gui/ee/assets/css/theme-overrides.scss
@@ -84,6 +84,12 @@ body {
 
 .ant-select-clear {
   @apply rounded-full flex children:flex-none;
+  color: rgba(var(--rgb-base), 0.25);
+  background: var(--nc-bg-default);
+}
+
+.ant-select-clear:hover {
+  color: rgba(var(--rgb-base), 0.45);
 }
 
 .ant-select:not(.ant-select-customize-input) .ant-select-selector {
